--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Raspberry Pi IDS Dashboard Group 1</title>
+    <title>Raspberry Pi IDS Dashboard</title>
     <meta http-equiv="refresh" content="30">
     <style>
         table { border-collapse: collapse; width: 100%; }
@@ -35,3 +35,4 @@
 <p>Auto-refresh every 30 seconds | Powered by Azure & Flask</p>
 </body>
 </html>
+
